Fix detecting start of row group in parquet reader
(cherry picked from commit 1c4a849f1e3e130406b275fb6b36d42e1bf0a450)
(cherry picked from commit d1e622c946a469fc91670cea6e1b51a9f1030d8d)